syntax = "proto3";

package receipts.v1;

option go_package = "github.com/joseph-ayodele/receipts-tracker/gen/proto/receipts/v1;v1";

message Receipt {
  string id = 1;
  string profile_id = 2;
  string merchant_name = 3;
  string tx_date = 4;        // YYYY-MM-DD
  string total = 5;          // decimal string
  string currency_code = 6;  // e.g., USD
  string created_at = 7;     // RFC3339
  string updated_at = 8;     // RFC3339
}

message ListReceiptsRequest {
  string profile_id = 1;     // required
  string from_date = 2;      // optional YYYY-MM-DD
  string to_date = 3;        // optional YYYY-MM-DD
}
message ListReceiptsResponse {
  repeated Receipt receipts = 1;
}

service ReceiptsService {
  rpc ListReceipts(ListReceiptsRequest) returns (ListReceiptsResponse);
}
